[gd_scene load_steps=56 format=3 uid="uid://bjqqv1pt1j5i4"]

[ext_resource type="Script" uid="uid://bsvqb8bdsl7cr" path="res://characters/player/scripts/player.gd" id="1_rkbax"]
[ext_resource type="Texture2D" uid="uid://batu1yn20sabp" path="res://characters/player/sprites/walk_idle.png" id="2_2ieo8"]
[ext_resource type="Script" uid="uid://eih2lt8gw0di" path="res://characters/player/scripts/player_state_machine.gd" id="3_g1dw6"]
[ext_resource type="Texture2D" uid="uid://brrxkuimijn47" path="res://characters/player/sprites/attack_spear.png" id="4_kb6p2"]
[ext_resource type="Script" uid="uid://d0dm63wwrtu4p" path="res://characters/player/scripts/player_state_idle.gd" id="4_qjkh3"]
[ext_resource type="Script" uid="uid://160xg7sg0npy" path="res://characters/player/scripts/player_state_walk.gd" id="5_g6k8r"]
[ext_resource type="Script" uid="uid://bgjgq60tiwfau" path="res://characters/player/scripts/player_state_dash.gd" id="6_58jvb"]
[ext_resource type="Script" uid="uid://dk0glo1dp1hn4" path="res://characters/player/scripts/player_state_attack.gd" id="7_boad6"]
[ext_resource type="AudioStream" uid="uid://c0yyygfmye5gh" path="res://characters/player/audio/attack/swish-1.wav" id="8_rgyib"]
[ext_resource type="Script" uid="uid://042khr3odx1m" path="res://characters/player/scripts/player_camera.gd" id="9_2ieo8"]
[ext_resource type="Script" uid="uid://dq3ogdc7ncdkb" path="res://characters/player/scripts/player_interactions.gd" id="9_8t03j"]
[ext_resource type="PackedScene" uid="uid://yh5g02tn68j" path="res://general_nodes/hurtbox/hurtbox.tscn" id="9_hg6s5"]
[ext_resource type="Script" uid="uid://oanbyy4obxrd" path="res://characters/player/scripts/player_state_stun.gd" id="9_icpky"]
[ext_resource type="PackedScene" uid="uid://62paws8grpg4" path="res://general_nodes/hitbox/hitbox.tscn" id="12_on558"]
[ext_resource type="AudioStream" uid="uid://7kvq8wu5lc3" path="res://characters/player/audio/attack/hit_player.wav" id="13_gqopd"]

[sub_resource type="CircleShape2D" id="CircleShape2D_maef2"]
radius = 7.0

[sub_resource type="Animation" id="Animation_g1dw6"]
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Attack:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r7pn3"]
resource_name = "attack_E"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55, 63]
}

[sub_resource type="Animation" id="Animation_b8hi5"]
resource_name = "attack_N"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31, 63]
}

[sub_resource type="Animation" id="Animation_q28gw"]
resource_name = "attack_NE"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39, 63]
}

[sub_resource type="Animation" id="Animation_jd2rm"]
resource_name = "attack_NW"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23, 63]
}

[sub_resource type="Animation" id="Animation_2uvqg"]
resource_name = "attack_S"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 63]
}

[sub_resource type="Animation" id="Animation_5ejfk"]
resource_name = "attack_SE"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47, 63]
}

[sub_resource type="Animation" id="Animation_1s1yo"]
resource_name = "attack_SW"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15, 63]
}

[sub_resource type="Animation" id="Animation_rptt4"]
resource_name = "attack_W"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Attack:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.043, 0.086, 0.129, 0.171, 0.214, 0.257, 0.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62, 63, 63]
}

[sub_resource type="Animation" id="Animation_s7qer"]
resource_name = "idle_E"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.143, 0.286, 0.429, 0.571, 0.714, 0.857, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [120, 121, 122, 123, 124, 125, 126, 127]
}

[sub_resource type="Animation" id="Animation_x7c3f"]
resource_name = "idle_N"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [88, 89, 90, 91, 92, 93, 94, 95]
}

[sub_resource type="Animation" id="Animation_knn7v"]
resource_name = "idle_NE"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.143, 0.286, 0.429, 0.571, 0.714, 0.857, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [96, 97, 98, 99, 100, 101, 102, 103]
}

[sub_resource type="Animation" id="Animation_g4c7l"]
resource_name = "idle_NW"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.143, 0.286, 0.429, 0.571, 0.714, 0.857, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83, 84, 85, 86, 87]
}

[sub_resource type="Animation" id="Animation_bjvpn"]
resource_name = "idle_S"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.143, 0.286, 0.429, 0.571, 0.714, 0.857, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_7pqkx"]
resource_name = "idle_SE"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.143, 0.286, 0.429, 0.571, 0.714, 0.857, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [104, 105, 106, 107, 108, 109, 110, 111]
}

[sub_resource type="Animation" id="Animation_uw77l"]
resource_name = "idle_SW"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.143, 0.286, 0.429, 0.571, 0.714, 0.857, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [72, 73, 74, 75, 76, 77, 78, 79]
}

[sub_resource type="Animation" id="Animation_65viv"]
resource_name = "idle_W"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [112, 113, 114, 115, 116, 117, 118, 119]
}

[sub_resource type="Animation" id="Animation_icpky"]
resource_name = "stun_E"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [120]
}

[sub_resource type="Animation" id="Animation_gqopd"]
resource_name = "stun_N"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [88]
}

[sub_resource type="Animation" id="Animation_aqrcq"]
resource_name = "stun_NE"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [96]
}

[sub_resource type="Animation" id="Animation_8l73k"]
resource_name = "stun_NW"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}

[sub_resource type="Animation" id="Animation_on558"]
resource_name = "stun_S"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [64]
}

[sub_resource type="Animation" id="Animation_fpo3a"]
resource_name = "stun_SE"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [104]
}

[sub_resource type="Animation" id="Animation_d2agh"]
resource_name = "stun_SW"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [72]
}

[sub_resource type="Animation" id="Animation_58jvb"]
resource_name = "stun_W"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [112]
}

[sub_resource type="Animation" id="Animation_ebec5"]
resource_name = "idle_E"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 59, 60, 61, 62, 63]
}

[sub_resource type="Animation" id="Animation_yllr7"]
resource_name = "idle_N"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_e7oew"]
resource_name = "walk_NE"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [32, 33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="Animation" id="Animation_tqiix"]
resource_name = "walk_NW"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_kb6p2"]
resource_name = "idle_S"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_wodsf"]
resource_name = "idle_SE"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [40, 41, 42, 43, 44, 45, 46, 47]
}

[sub_resource type="Animation" id="Animation_c35mf"]
resource_name = "walk_SW"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_32hag"]
resource_name = "idle_W"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle_Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51, 52, 53, 54, 55]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yw30f"]
_data = {
&"RESET": SubResource("Animation_g1dw6"),
&"attack_E": SubResource("Animation_r7pn3"),
&"attack_N": SubResource("Animation_b8hi5"),
&"attack_NE": SubResource("Animation_q28gw"),
&"attack_NW": SubResource("Animation_jd2rm"),
&"attack_S": SubResource("Animation_2uvqg"),
&"attack_SE": SubResource("Animation_5ejfk"),
&"attack_SW": SubResource("Animation_1s1yo"),
&"attack_W": SubResource("Animation_rptt4"),
&"idle_E": SubResource("Animation_s7qer"),
&"idle_N": SubResource("Animation_x7c3f"),
&"idle_NE": SubResource("Animation_knn7v"),
&"idle_NW": SubResource("Animation_g4c7l"),
&"idle_S": SubResource("Animation_bjvpn"),
&"idle_SE": SubResource("Animation_7pqkx"),
&"idle_SW": SubResource("Animation_uw77l"),
&"idle_W": SubResource("Animation_65viv"),
&"stun_E": SubResource("Animation_icpky"),
&"stun_N": SubResource("Animation_gqopd"),
&"stun_NE": SubResource("Animation_aqrcq"),
&"stun_NW": SubResource("Animation_8l73k"),
&"stun_S": SubResource("Animation_on558"),
&"stun_SE": SubResource("Animation_fpo3a"),
&"stun_SW": SubResource("Animation_d2agh"),
&"stun_W": SubResource("Animation_58jvb"),
&"walk_E": SubResource("Animation_ebec5"),
&"walk_N": SubResource("Animation_yllr7"),
&"walk_NE": SubResource("Animation_e7oew"),
&"walk_NW": SubResource("Animation_tqiix"),
&"walk_S": SubResource("Animation_kb6p2"),
&"walk_SE": SubResource("Animation_wodsf"),
&"walk_SW": SubResource("Animation_c35mf"),
&"walk_W": SubResource("Animation_32hag")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ieo8"]
size = Vector2(28, 12)

[sub_resource type="Animation" id="Animation_5mkjs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yybc7"]
resource_name = "damaged"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.0980392), Color(1, 1, 1, 1), Color(1, 1, 1, 0.196078), Color(1, 1, 1, 1), Color(1, 1, 1, 0.392157), Color(1, 1, 1, 1), Color(1, 1, 1, 0.588235), Color(1, 1, 1, 1)]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Audio/AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("13_gqopd")
}],
"times": PackedFloat32Array(0)
}
tracks/1/use_blend = true

[sub_resource type="Animation" id="Animation_kyfeq"]
resource_name = "default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lv4bx"]
_data = {
&"RESET": SubResource("Animation_5mkjs"),
&"damaged": SubResource("Animation_yybc7"),
&"default": SubResource("Animation_kyfeq")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 16
motion_mode = 1
wall_min_slide_angle = 0.174533
script = ExtResource("1_rkbax")
max_health = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_maef2")

[node name="Idle_Walk" type="Sprite2D" parent="."]
position = Vector2(0, -4)
texture = ExtResource("2_2ieo8")
hframes = 8
vframes = 16

[node name="Attack" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -4)
texture = ExtResource("4_kb6p2")
hframes = 8
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yw30f")
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_g1dw6")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_qjkh3")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("6_58jvb")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_g6k8r")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("7_boad6")
attack_sound = ExtResource("8_rgyib")
decelerate_speed = 6.0

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("9_icpky")

[node name="Camera2D" type="Camera2D" parent="."]
editor_draw_limits = true
script = ExtResource("9_2ieo8")

[node name="Audio" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
max_polyphony = 4

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("9_8t03j")

[node name="AttackHurtbox" parent="Interactions" instance=ExtResource("9_hg6s5")]
unique_name_in_owner = true
position = Vector2(14, 0)
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/AttackHurtbox"]
shape = SubResource("RectangleShape2D_2ieo8")
debug_color = Color(0.935797, 0, 0.171449, 0.42)

[node name="Hitbox" parent="." instance=ExtResource("12_on558")]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_maef2")

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_lv4bx")
}
